<?xml version="1.0" encoding="utf-8"?><!--
AutoAmplifier - Android application that changes media volume according to noise in the surroundings.
Copyright (C) 2014  Brightify s.r.o.

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name" translatable="false">AutoAmplifier</string>
    <string name="hello_world">Hello world!</string>
    <string name="prefs_save">Save settings</string>
    <string name="prefs_save_description">Save settings and restore on start</string>
    <string name="author">Author</string>
    <string name="notification_title">Touch to adjust settings</string>
    <string name="main_fragment_tag" translatable="false">mainFragment</string>
    <string name="auto_volume_control_label">Automatic volume control</string>
    <string name="current_mic_label">Current microphone</string>
    <string name="current_volume_label">Current volume</string>
    <string name="settings_label">Settings</string>
    <string name="quiet_environment_label">Quiet environment</string>
    <string name="volume_label">Volume</string>
    <string name="mic_label">Microphone</string>
    <string name="noisy_environment_label">Noisy environment</string>
    <string name="service_label">AmplifierService</string>
    <string name="reset">Revert to default</string>
    <string name="notification_disable">Disable</string>
    <string name="notification_increase">Increase</string>
    <string name="notification_decrease">Decrease</string>

</resources>
