<!--
    AutoAmplifier - Android application that changes media volume according to noise in the surroundings.
    Copyright (C) 2014  Brightify s.r.o.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:scrollbarStyle="outsideOverlay"
    tools:context="org.brightify.autoamplifier.MainFragment_">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/auto_volume_control_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="@dimen/separator_margin"
            android:text="@string/auto_volume_control_label" />

        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/autoamplifiertheme_color" />

        <LinearLayout
            android:id="@+id/automatic_volume_control_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/enable_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/switch_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_volume_control_label"
                    android:textSize="14sp" />

                <Switch
                    android:id="@+id/enable_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:thumb="@drawable/autoamplifiertheme_switch_inner_holo_light"
                    android:track="@drawable/autoamplifiertheme_switch_track_holo_light" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/current_volume_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/current_volume_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/current_volume_label"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/current_volume_progress"
                    style="@style/ProgressBarAutoAmplifierTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/currentMicGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/current_mic_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/current_mic_label"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/current_mic_progress"
                    style="@style/ProgressBarAutoAmplifierTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="32767" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/settings_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="@dimen/eight_dp_margin"
            android:text="@string/settings_label" />

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/autoamplifiertheme_color" />

        <LinearLayout
            android:id="@+id/quiet_settings_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quiet_settings_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiet_environment_label"
                android:textAllCaps="true" />

            <LinearLayout
                android:id="@+id/quiet_volume_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/loudspeaker1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_loudspeaker" />

                <TextView
                    android:id="@+id/volume_label1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/volume_label"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/quiet_volume_seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quiet_mic_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/mic1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_mic" />

                <TextView
                    android:id="@+id/mic_label1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/mic_label" />

                <SeekBar
                    android:id="@+id/quiet_mic_seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:max="32767" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/noisy_settings_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noisy_settings_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noisy_environment_label"
                android:textAllCaps="true" />

            <LinearLayout
                android:id="@+id/noisy_volume_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/loudspeaker2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_loudspeaker" />

                <TextView
                    android:id="@+id/volume_label2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/volume_label"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/noisy_volume_seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/noisy_mic_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/mic2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_mic" />

                <TextView
                    android:id="@+id/mic_label2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/mic_label" />

                <SeekBar
                    android:id="@+id/noisy_mic_seekBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:max="32767" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
